objects/ssot__ApplicationItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationItemType__c</fullName>
        <label>Application Item Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialApplicationItemId__c</fullName>
        <label>Financial Application Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Application Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceRecordId__c</fullName>
        <label>Reference Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceRecordObject__c</fullName>
        <label>Reference Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227425055_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationItem_ApplicationId_map_Ap_rel</label>
        <referenceTo>ssot__Application__dlm</referenceTo>
        <relationshipLabel>ApplicationItem_ApplicationId_map_Ap_rel</relationshipLabel>
        <relationshipName>rel_1729227425055_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227427684_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationItem_ReferenceRecordId_ma_rel</label>
        <referenceTo>ssot__Benefit__dlm</referenceTo>
        <relationshipLabel>ApplicationItem_ReferenceRecordId_ma_rel</relationshipLabel>
        <relationshipName>rel_1729227427684_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227451705_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationItem_ReferenceRecordId_ma_rel</label>
        <referenceTo>ssot__JobPosition__dlm</referenceTo>
        <relationshipLabel>ApplicationItem_ReferenceRecordId_ma_rel</relationshipLabel>
        <relationshipName>rel_1729227451705_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>